<resources>
    <string name="google_maps_key" translatable="false">AIzaSyCDsFYWbofpXL-8s7f4pjIzYLd8yu9X3fc</string>
    <string name="facebook_app_id" translatable="false">2087498431271456</string>
    <string name="default_notification_channel_id" translatable="false">woz_channel</string>
    <string name="login_fail">Email/Phone number or password is incorrect</string>
    <string name="explanation">Need permission %s</string>
    <string name="email_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="login_with_social_account">Login as @SocialFB_Account</string>
    <string name="term_policy">By clicking Register, you agree to our</string>
    <string name="term_policy_action">Terms &amp; Privacy Policy</string>
    <string name="term_policy_bottom">Product of</string>
    <string name="term_policy_bottom_more" translatable="false">Minh United &amp; MHT</string>
    <string name="information_register">Create your account. It\'s free and only takes a minute</string>
    <string name="register_now">Register Now</string>
    <string name="slogan" translatable="false">Play golf more easy</string>
    <string name="delete_success">Delete success</string>
    <string name="request_delete_tournament">Do you sure want to delete this tournament?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="countryEntity">Country</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="information_term_policy_register">By creating an account, you agree to our</string>
    <string name="information_term_policy_register_01" translatable="false">Terms &amp; Privacy Policy</string>
    <string name="phone_vietnam" translatable="false">Vietnam (+84)</string>
    <string name="validate_otp">Verification</string>
    <string name="validate_otp_detail">Enter 4-digit code sent to you at</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify Phone Number</string>
    <string name="information_unregister" translatable="false">To create a account, enter a phone number that can be used to verify</string>
    <string name="double_tap_to_back">Please click BACK again to exit</string>
    <string name="tab_new">NEWS</string>
    <string name="tab_video" translatable="false">VIDEOS</string>
    <string name="tab_booking">BOOKING</string>
    <string name="tab_calendar">SCHEDULE</string>
    <string name="tab_feeds">FEEDS</string>
    <string name="tab_handicap" translatable="false">HANDICAP</string>
    <string name="tab_course">COURSES</string>
    <string name="tab_group">GROUP</string>
    <string name="tab_more">MORE</string>
    <string name="type">TYPE:</string>
    <string name="holes">HOLES:</string>
    <string name="par" translatable="false">PAR:</string>
    <string name="length">LENGTH:</string>
    <string name="slope" translatable="false">SLOPE:</string>
    <string name="fees" translatable="false">FEES:</string>
    <string name="confirm">Confirm</string>
    <string name="courses">Courses</string>
    <string name="plan" translatable="false">Plan</string>
    <string name="rounds">Rounds</string>
    <string name="play_new_round">PLAY NEW ROUND</string>
    <string name="play_continue_round">CONTINUE ROUND</string>
    <string name="add_plan">ADD PLAN</string>
    <string name="loading_map">Loading</string>
    <string name="loading">Loading…</string>
    <string name="format_yard" translatable="false">%s y</string>
    <string name="format_yard_full" translatable="false">%s yds</string>
    <string name="format_meter" translatable="false">%s ms</string>
    <string name="format_name_country" translatable="false">%s (+%s)</string>
    <string name="format_result_name_country" translatable="false">%s (+%s)</string>
    <string name="search_courses">Search Courses</string>
    <string name="search_country">Search country</string>
    <string name="search_rule">How to play golf?</string>
    <string name="search_name">Type name</string>
    <string name="finish_ground">Finish Round</string>
    <string name="format_view_hole_current">HOLE %s</string>
    <string name="distance">Distance</string>
    <string name="distances">Distances</string>
    <string name="green" translatable="false">Green</string>
    <string name="tee" translatable="false">Tee</string>
    <string name="format_par" translatable="false">Par</string>
    <string name="format_ls" translatable="false">S.l </string>
    <string name="format_view_par_current" translatable="false">Par %s</string>
    <string name="format_view_hdc_current" translatable="false">Hdc %s</string>
    <string name="format_view_yds_total" translatable="false">%s yds</string>
    <string name="strokes" translatable="false">Strokes</string>
    <string name="putts" translatable="false">Putts  </string>
    <string name="fairway_hit" translatable="false">Fairway Hit  </string>
    <string name="green_in_regulation" translatable="false">Green In Regulation  </string>
    <string name="green_in_regulation_short" translatable="false">GIR</string>
    <string name="score">Score  </string>
    <string name="fh" translatable="false">FH  </string>
    <string name="gir" translatable="false">GIR  </string>
    <string name="add_score_card">Add Score</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="transition_image" translatable="false">easy_golf_image</string>
    <string name="transition_name" translatable="false">easy_golf_name</string>
    <string name="account_settings">Account Setting</string>
    <string name="change_password">Change Password</string>
    <string name="golf_rules">Golf Rules</string>
    <string name="about_us">About Us</string>
    <string name="terms_conditions">Terms AND Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="last_update_version">Last update version %s</string>
    <string name="recent_post" translatable="false">Recent Post</string>
    <string name="event">Event</string>
    <string name="tutorial">Tutorial</string>
    <string name="information_forget_password">Use this form to change your password. \n One change, your new password will be effected in next time you login</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="key_test_fairy" translatable="false">cebae76bcf937eb4a851d2d235c3b85d966ffd25</string>
    <string name="back_green">back</string>
    <string name="center_green">center</string>
    <string name="front_green">front</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="please_confirm">Please Confirm</string>
    <string name="more_logout">Are you sure want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view_score_card">View ScoreCard</string>
    <string name="quit_game">Exit Game</string>
    <string name="error_first_name">Enter first name</string>
    <string name="error_last_name">Enter last name</string>
    <string name="error_confirm_password">Confirm password not match</string>
    <string name="error_email">Enter a valid email address</string>
    <string name="error_phone">Enter a valid phone</string>
    <string name="error_password">Enter at least 6 characters</string>
    <string name="booking" translatable="false">Booking</string>
    <string name="booking_now" translatable="false">Booking Now</string>
    <string name="format_dialog_score" translatable="false">Hole %s Par %s S.I %s</string>
    <string name="coming_soon" translatable="false">Coming Soon!</string>
    <string name="no_data">No Data</string>
    <string name="easy_golf_app" translatable="false">EasyGolf App</string>
    <string name="updated">Updated</string>
    <string name="size">Size</string>
    <string name="current_version">Current Version</string>
    <string name="developer">Developer</string>
    <string name="visit_website">Visit Website</string>
    <string name="email_feedback" translatable="false">easygolf@feedback.com</string>
    <string name="requires_android" translatable="false">Requires Android</string>
    <string name="content_requires_android" translatable="false">4.4W and Up</string>
    <string name="min_name_version">%s and Up</string>
    <string name="link_website">&lt;a href="https://easygolf.vn">Visit Website&lt;/a></string>
    <string name="general" translatable="false">General</string>
    <string name="full_name">Full name</string>
    <string name="cell_phone">Cellphone</string>
    <string name="phone_number">Phone number</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="notification">Notifications</string>
    <string name="phone_notification">Push Notification</string>
    <string name="email_notification">Email Notification</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="feedback_title">Give Feedback</string>
    <string name="feedback_content">We want to know what you thought of experience at EasyGolf so we\'d love to hear your feedback</string>
    <string name="general_question">General question</string>
    <string name="suggestion">Suggestion</string>
    <string name="incorrect_hole_details" translatable="false">Incorrect hole details</string>
    <string name="incorrect_course_details" translatable="false">Incorrect course details</string>
    <string name="title_access_location">Location services</string>
    <string name="content_access_location">In order to find nearly courses and use GPS+, you must enable location services.</string>
    <string name="enable">Enable</string>
    <string name="not_now">Not now</string>
    <string name="view_green" translatable="false">Yardage book</string>
    <string name="note">Note</string>
    <string name="report_hole">Report this hole</string>
    <string name="share">Share</string>
    <string name="end_game">End Game</string>
    <string name="change_to_meter">Change to meter</string>
    <string name="change_default_tee">Change default tee</string>
    <string name="score_card">Scorecards</string>
    <string name="par_clear" translatable="false">PAR</string>
    <string name="cr" translatable="false">cr</string>
    <string name="sr" translatable="false">sr</string>
    <string name="start_chat">Start Chat</string>
    <string name="create_group_title">Welcome to Chat Group</string>
    <string name="create_group_info">Create groups with your family \n and your friends</string>
    <string name="delete">Delete</string>
    <string name="title_host_end_game">FINISHED ROUND</string>
    <string name="content_finish_round">The round has been finished by owner.</string>
    <string name="title_invite">INVITATION</string>
    <string name="content_invite">You have been invited playing a round at the current club. Do you want to participate?</string>
    <string name="title_confirm_data">PLEASE CONFIRM</string>
    <string name="content_confirm_data">Do you want to upload all current scores? If not, it will be deleted.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="upload">Upload</string>
    <string name="view_summary">Round Summary</string>
    <string name="title_no_network" translatable="false">OOPS!</string>
    <string name="content_no_network" translatable="false">No internet connection found, check your connection or try again.</string>
    <string name="try_again" translatable="false">TRY AGAIN</string>
</resources>