<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.minhhop.easygolf.presentation.custom.EasyGolfHeaderNavigation
        android:id="@+id/easyGolfHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:sizeBezierBottom="@dimen/normal_margin"
        app:paddingHeader="@dimen/small_margin"
        >
        <com.minhhop.easygolf.presentation.custom.EasyGolfToolbar
            android:id="@+id/toolbarBack"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:isLight="true"
            app:title="@string/score_card"
            />
    </com.minhhop.easygolf.presentation.custom.EasyGolfHeaderNavigation>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/d_15"
        android:paddingEnd="@dimen/d_15"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tee"
                android:minWidth="65dp"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:textSize="@dimen/font_large"
                style="@style/bold"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:padding="@dimen/d_10"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:textSize="@dimen/font_large"
                style="@style/bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:padding="@dimen/d_10"
                android:layout_height="wrap_content"
                android:text="@string/par_clear"
                android:textAllCaps="true"
                android:minWidth="50dp"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:textSize="@dimen/font_large"
                style="@style/bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cr"
                android:minWidth="50dp"
                android:padding="@dimen/d_10"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:textSize="@dimen/font_large"
                style="@style/bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sr"
                android:minWidth="50dp"
                android:textAllCaps="true"
                android:padding="@dimen/d_10"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:textSize="@dimen/font_large"
                style="@style/bold"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDiver"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listDataTee"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>