<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/viewRoot"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="@dimen/d_10"
    android:paddingEnd="10dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_confirm_data"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:id="@+id/dialog_message_etv"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_confirm_data"
            android:gravity="center"
            android:textColor="@color/colorTextNormal"
            android:textSize="15sp"
            />


        <TextView
            android:id="@+id/btAccept"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:textAlignment="center"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@drawable/background_button_sign_in"
            />

        <TextView
            android:id="@+id/btRefuse"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete"
            android:textAllCaps="true"
            android:textColor="@color/colorButtonSignIn"
            android:textSize="16sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>