<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_border_white"
    android:layout_margin="20dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="50dp"
    >

    <ImageView
        android:id="@+id/btClose"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_icon_close_task"
        android:layout_gravity="end"
        />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_confirm"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textAppearance="@style/AppTheme.WozFont.Bold"
        />

    <TextView
        android:id="@+id/txtContent"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_logout"
        android:textColor="@color/colorTextDark"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="@style/AppTheme.WozFont"
        />


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btYes"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:text="@string/yes"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:background="@drawable/background_button_sign_in"
            />

        <Button
            android:id="@+id/btNo"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:text="@string/no"
            android:textAllCaps="true"
            android:layout_marginStart="15dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/background_button_booking"
            />

    </LinearLayout>

</LinearLayout>