<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group_title"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            />
        <TextView
            android:layout_marginTop="@dimen/d_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group_info"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/btStartChat"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/start_chat"
            android:textColor="@color/colorWhite"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/background_button_sign_in"
            />
    </LinearLayout>


</RelativeLayout>